# nano_tensorRT

./: README.md
yolov5/: CMakeLists.txt  README.md  yolov5_det.cpp
yolov5/src/: config.h
